<resources>
    <string name="app_name">Tc The Contractor</string>

    <string name="exit_app_string">Do you wan\'t to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tvTotal">Total</string>
    <string name="percentage">Percentage</string>
    <string name="Paid">Paid Amount</string>
    <string name="Amount">Amount</string>
    <string name="Balance">Balance</string>
    <string name="Remarks">Remarks</string>
    <string name="Work_description">Work description</string>
    <string name="Unit">Unit</string>
    <string name="Quantity">Quantity</string>
    <string name="Rate">Rate</string>
    <string name="Billing_stages">Billing stages</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create \n Account</string>
    <string name="forgot_password">Forgot</string>
    <string name="fpassword">Password?</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number *</string>
    <string name="email">Email *</string>
    <string name="first_name">First Name</string>
    <string name="submit">Submit</string>
    <string name="title_activity_success_fullscreen"> </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="share_app_msg">\nLet me recommend you this application\n\n</string>
    <string name="share_app_store_link">https://play.google.com/store/apps/details?id=</string>
    <string name="choose_one">choose one</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password?</string>
    <string name="failure_permission">SMS Persimission is not granted</string>
    <string name="permission_not_granted">Permission not yet granted</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="login_error">Invalid Username or Password</string>
    <string name="invalid_data_forgot_password">Invalid data entered</string>
    <string name="title_activity_user_type">FullscreenActivity</string>
    <string name="contractor">Contractor</string>
    <string name="client">Client</string>
    <string name="cpassword">Confirm Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="otp">Otp</string>
    <string name="confirm_otp">Confirm Otp</string>
    <string name="company_name">Company name</string>
    <string name="input_address_1">Address 1</string>
    <string name="input_address_2">Address 2</string>
    <string name="input_city">City</string>
    <string name="input_zip">Zip</string>
    <string name="input_state">State</string>
    <string name="input_country">Country</string>
    <string name="create_client">Create Client</string>
    <string name="client_id">Client Id</string>
    <string name="create_sub_contractor">Create Sub Contractor</string>
    <string name="next">Next</string>
    <string name="register">Regitser</string>
    <string name="select_sub_contractor">Select sub contractor</string>
    <string name="Work_order">Work Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work_order_list">Work Order List</string>
    <string name="billing_stages">Billing Stages</string>
    <string name="rate_for_project">Rate for project</string>
    <string name="schedule">Schedule</string>
    <string name="number_of_days">Number of Days</string>
    <string name="project_name">Project Name</string>
    <string name="client_work_order">Client Work Order</string>
    <string name="client_billing">Client Billing</string>
    <string name="contact_number">Contact Number *</string>
    <string name="address">Address *</string>
    <string name="add_material">Add Material</string>
    <string name="add_suplr">Add Supplier</string>
    <string name="brand_name">Brand Name</string>
    <string name="material_des">Material Description</string>
    <string name="suplr_nam">Supplier Name *</string>
    <string name="gst">GST </string>
    <string name="gst_amount">GST Amount</string>
    <string name="title_activity_add_suppiler">add_suppiler</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="material_type">Material Type</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="select_material">Select Material</string>
    <string name="add_payment">Add Payment</string>
    <string name="firm_name">Firm Name *</string>
    <string name="full_name">Full Name *</string>
    <string name="pan_cart_no">Pan Card No.</string>
    <string name="aadhar_cart_no">Aadhar Card No.</string>
    <string name="gst_no">GST No.</string>
    <string name="bank_details">Bank Details</string>
    <string name="save">Save</string>
    <string name="paid_to">Paid To</string>
    <string name="payment_type_cash_online">Payment Type(cash/online)</string>
    <string name="filter_material">Filter Material</string>
    <string name="font_name">font/nunito_regular.ttf</string>

</resources>