<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/margin_16"
    android:paddingRight="@dimen/margin_16">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="@dimen/fab_margin">

            <!--START OF SHIPPING METHOD CONATINER-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:orientation="horizontal"
                android:weightSum="3">

            </LinearLayout>
            <!--END OF SHIPPING METHOD CONATINER-->


            <!--START OF EDITTEXT : ADDRESS LINE 1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/input_address_1" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_shipping_address_1"
                    />

            </LinearLayout>
            <!--END OF EDITTEXT : ADDRESLINE 1-->

            <!--START OF EDITTEXT : ADDRESLINE 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/input_address_2" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_shipping_address_2"
                    />

            </LinearLayout>
            <!--END OF EDITTEXT : ADDRESLINE 2-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--START OF EDITTEXT : CITY-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/fab_margin_half"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/input_city" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_shipping_city"
                        />
                </LinearLayout>
                <!--END OF EDITTEXT : CITY-->

                <!--START OF EDITTEXT : ZIP CODE-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/fab_margin_half"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/input_zip" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_shipping_zip"
                        android:inputType="number"
                        android:maxLength="6"/>
                </LinearLayout>
                <!--END OF EDITTEXT : ZIP CODE-->

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--START OF EDITTEXT : STATE-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/fab_margin_half"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/input_state" />

                    <EditText
                        android:id="@+id/et_shipping_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="Maharashtra"
                        />
                </LinearLayout>
                <!--END OF EDITTEXT : STATE-->

                <!--START OF EDITTEXT : COUNTRY-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/fab_margin_half"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/input_country" />

                    <EditText
                        android:id="@+id/et_shipping_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="India"
                        />
                </LinearLayout>
                <!--END OF EDITTEXT : COUNTRY-->

            </LinearLayout>


            <Button
                android:id="@+id/btn_complete_address_inner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Address" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
