<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".project.activity.AddSubContractorActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt_search_sub_contractor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Search sub contractor"
        android:drawableRight="@drawable/ic_search"
        android:drawableEnd="@drawable/ic_search"
        android:layout_margin="10dp"/>

    <RelativeLayout
        android:id="@+id/rl_search_sub_contractor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_txt_reg1"
            style="@style/LardTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_sub_contractor" />

       <ListView
           android:id="@+id/lst_sub_contractor"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@+id/tv_txt_reg1"
           android:layout_margin="@dimen/activity_horizontal_margin"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/sv_add_sub_contractor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_txt_reg"
                    android:layout_margin="@dimen/_5sdp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_txt_reg"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_sub_contractor" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_firm_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_txt_reg"
                        android:layout_margin="@dimen/input_margin_5dp"
                        app:errorIconDrawable="@drawable/edit_background">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_firm_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_background"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                            android:drawableStart="@drawable/ic_user"
                            android:drawableLeft="@drawable/ic_user"
                            android:drawablePadding="@dimen/drawable_padding"
                            android:hint="@string/firm_name"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:maxLength="20"
                            android:nextFocusDown="@id/edt_firm_name"
                            android:singleLine="true" />


                        <requestFocus></requestFocus>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_txt_reg"
                        android:layout_margin="@dimen/input_margin_5dp"
                        app:errorIconDrawable="@drawable/edit_background">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_full_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_background"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                            android:drawableStart="@drawable/ic_user"
                            android:drawableLeft="@drawable/ic_user"
                            android:drawablePadding="@dimen/drawable_padding"
                            android:hint="@string/full_name"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:maxLength="60"
                            android:nextFocusDown="@id/edt_address"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/input_margin_5dp"
                        app:errorIconDrawable="@drawable/edit_background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_background"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                            android:drawableStart="@drawable/ic_user"
                            android:drawableLeft="@drawable/ic_user"
                            android:drawablePadding="@dimen/drawable_padding"
                            android:hint="@string/address"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:maxLength="300"
                            android:nextFocusDown="@id/edt_mobile"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/input_margin_5dp"
                        app:errorIconDrawable="@drawable/edit_background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_background"
                            android:drawableStart="@drawable/ic_mobile"
                            android:drawableLeft="@drawable/ic_mobile"
                            android:drawablePadding="@dimen/drawable_padding"
                            android:hint="@string/mobile_number"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="10"
                            android:nextFocusDown="@id/edt_email"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/til_mobile"
                        android:layout_margin="@dimen/input_margin_5dp"
                        app:errorIconDrawable="@drawable/edit_background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_background"
                            android:drawableStart="@drawable/ic_email"
                            android:drawableLeft="@drawable/ic_email"
                            android:drawablePadding="@dimen/drawable_padding"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLength="40"
                            android:nextFocusDown="@id/edt_pan_cart_no"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_pan_cart_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/input_margin_5dp"
                        android:background="@drawable/edit_background"
                        app:errorIconDrawable="@drawable/edit_background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_pan_cart_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_background"
                            android:drawableStart="@drawable/ic_password"
                            android:drawableLeft="@drawable/ic_password"
                            android:drawablePadding="@dimen/drawable_padding"
                            android:hint="@string/pan_cart_no"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLength="30"
                            android:nextFocusDown="@id/edt_aadhar_cart_no"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_aadhar_cart_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/input_margin_5dp"
                        android:background="@drawable/edit_background"
                        app:errorIconDrawable="@drawable/edit_background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_aadhar_cart_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_background"
                            android:drawableStart="@drawable/ic_password"
                            android:drawableLeft="@drawable/ic_password"
                            android:drawablePadding="@dimen/drawable_padding"
                            android:hint="@string/aadhar_cart_no"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLength="30"
                            android:nextFocusDown="@id/edt_gst_no"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_gst_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/input_margin_5dp"
                        android:background="@drawable/edit_background"
                        app:errorIconDrawable="@drawable/edit_background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_gst_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_background"
                            android:drawableStart="@drawable/ic_password"
                            android:drawableLeft="@drawable/ic_password"
                            android:drawablePadding="@dimen/drawable_padding"
                            android:hint="@string/gst_no"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLength="30"
                            android:nextFocusDown="@id/edt_bank_details"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_bank_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/input_margin_5dp"
                        android:background="@drawable/edit_background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_bank_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_background"
                            android:drawableStart="@drawable/ic_password"
                            android:drawableLeft="@drawable/ic_password"
                            android:drawablePadding="@dimen/drawable_padding"
                            android:hint="@string/bank_details"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:nextFocusDown="@id/btn_register"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/button_background"
                        android:drawableEnd="@drawable/ic_arrow_right"
                        android:drawableRight="@drawable/ic_arrow_right"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </ScrollView>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>